1.19-6.0.7:
- Accidental hard dependency on TOP

1.19-6.0.6:
- Dadobug1111 improved worldgen in several (sometimes subtle, sometimes less subtle) ways
- Four new tags that allow you to customize worldgen: lostcities/notbreakable (blocks that can't break with explosions), lostcities/easybreakable (blocks that explosions will break more easily), lostcities/foliage (foliage block test), lostcities/rotatable (rotatable blocks, like stairs)
- It is now possible to configure the leaves rubble and the random dirt/stone rubble you get in the city style (generalsettings)
- Cleaned up some biome settings that aren't implemented. If they have to be redone it will be with another mod
- City spheres are back!
- Better API for sphere checking
- Forcing spawn works better now

1.19-6.0.5:
- SandTechnology fixed a bug on space type worlds (void worlds) with a potential crash
- Henkelmax fixed an issue with sleeping bags

1.19-6.0.4:
- Fixed a bug with the customize screen crashing

1.19-6.0.3:
- Fixed a problem with leaky roofs. When it was raining the rain got through. This was because the chunk heightmap wasn't correctly updated
- It's now also possible to specify the parts to use for highways, railways, and stations in the worldstyle using a new optional 'parts' section

1.19-6.0.2:
- Fixed a problem where rubble wouldn't be the correct block in case a building has an overridden palette

1.19-6.0.1:
- Fixed a concurrency issue with random source from the world

1.19-6.0.0:
- Port to 1.19!
- 'exportpart' now expects a filename where it will export the part and optional palette
- New 'listparts' to list all parts in the current chunk. Only works in edit mode
- New 'locatepart' to find a named part

1.18-5.3.4:
- It's now possible to toggle between different worldstyles in the Lost Cities world creation screen

1.18-5.3.3:
- Multibuildings can now be any size with a maximum of 3x3. So 1x2, 2x3, 2x2, ...